scripts enabled in index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
     <script src="main.js"></script>
     <script src="exercises/one.js"></script>
+    <script src="exercises/two.js"></script>
+    <script src="exercises/three.js"></script>
 </body>
 </html>
