put outcome on page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Tech It Easy Dashboard</title>
 </head>
 <body>
+    <p id="soldProducts"></p>
+    <p id="purchasedProducts"></p>
+    <p id="stockProducts"></p>
 
-    <script src="main.js"></script>
-    <script src="exercises/one.js"></script>
-    <script src="exercises/two.js"></script>
-    <script src="exercises/three.js"></script>
+    <script type="module" src="main.js"></script>
+    <script type="module" src="exercises/one.js"></script>
+    <script type="module" src="exercises/two.js"></script>
+    <script type="module" src="exercises/three.js"></script>
 </body>
 </html>
