--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Tech It Easy Dashboard</title>
 </head>
 <body>
-    <p id="soldProducts"></p>
-    <p id="purchasedProducts"></p>
-    <p id="stockProducts"></p>
+    <h1>Voorraad</h1>
+    <p id="soldProducts">Hier komt het aantal verkochte producten.</p>
+    <p id="purchasedProducts">Hier komt het aantal ingekochte producten.</p>
+    <p id="stockProducts">Hier komt het aantal nog te verkopen producten.</p>
+
+    <h2>TV's</h2>
+    <p id="brands"></p>
 
     <script type="module" src="main.js"></script>
     <script type="module" src="exercises/one.js"></script>
