starting up exercise four

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 <script type="module" src="exercises/one.js"></script>
 <script type="module" src="exercises/two.js"></script>
 <script type="module" src="exercises/three.js"></script>
+<script type="module" src="exercises/four.js"></script>
 </body>
 </html>
