--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <title>Tech It Easy Dashboard</title>
 </head>
 <body>
-<div>
+
+<section>
     <h1>Voorraad</h1>
     <p id="soldProducts">Hier komt het aantal verkochte producten.</p>
     <p id="purchasedProducts">Hier komt het aantal ingekochte producten.</p>
     <p id="stockProducts">Hier komt het aantal nog te verkopen producten.</p>
-</div>
+</section>
 
-<div>
+<section>
     <h2>TV's</h2>
     <ul id="brands"></ul>
-</div>
+</section>
+
+<section>
+    <h2>TV Descriptions</h2>
+    <p id="tvDescriptions"></p>
+</section>
 
 <script type="module" src="main.js"></script>
 <script type="module" src="exercises/one.js"></script>
